--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl_indicator/monitor_tpl_indicator_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl_indicator/monitor_tpl_indicator_list.html
@@ -2,7 +2,7 @@
 /**
  * 模版指标 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-02-12 17:26:29
+ * @since 2022-02-20 12:42:51
  */
  -->
  <!DOCTYPE html>
@@ -56,6 +56,7 @@
                     <!-- 间隔时间(秒） , intervalTime ,typeName=number_input, isHideInSearch=true -->
                     <!-- 数据保留天数 , dataKeepDay ,typeName=number_input, isHideInSearch=true -->
                     <!-- command_value , commandValue ,typeName=text_area, isHideInSearch=true -->
+                    <!-- 变量 , indicatorVariable ,typeName=text_area, isHideInSearch=true -->
                     <!-- snmp元数据 , snmpOid ,typeName=text_input, isHideInSearch=true -->
                     <!-- 排序 , itemSort ,typeName=number_input, isHideInSearch=true -->
                     <!-- 状态 , status ,typeName=radio_box, isHideInSearch=false -->
