--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_value_last/monitor_node_value_last_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_value_last/monitor_node_value_last_list.html
@@ -2,7 +2,7 @@
 /**
  * 节点数值最新 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-02-15 12:29:39
+ * @since 2022-02-20 14:46:46
  */
  -->
  <!DOCTYPE html>
@@ -66,10 +66,10 @@
                     <!-- 上行流量 , networkFlowUp ,typeName=number_input, isHideInSearch=true -->
                     <!-- 下流量 , networkFlowDown ,typeName=number_input, isHideInSearch=true -->
                     <!-- 连接数 , processCnt ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 物理内存(M) , pMemorySize ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 虚拟内存(M) , vMemorySize ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 物理内存使用率 , pMemoryUsed ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 虚拟内存使用率 , vMemoryUsed ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 物理内存(M) , pMemorySize ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 虚拟内存(M) , vMemorySize ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 物理内存使用率 , pMemoryUsed ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 虚拟内存使用率 , vMemoryUsed ,typeName=text_input, isHideInSearch=true -->
                     <!-- 信息 , info ,typeName=text_input, isHideInSearch=true -->
                     <!-- 标签1 , label1 ,typeName=text_input, isHideInSearch=true -->
                     <!-- 标签2 , label2 ,typeName=text_input, isHideInSearch=true -->
@@ -83,9 +83,9 @@
                     <!-- 字符串1 , valueStr1 ,typeName=text_input, isHideInSearch=true -->
                     <!-- 字符串2 , valueStr2 ,typeName=text_input, isHideInSearch=true -->
                     <!-- 字符串3 , valueStr3 ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 整数1 , valueInt1 ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 整数2 , valueInt2 ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 整数3 , valueInt3 ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 整数1 , valueInt1 ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 整数2 , valueInt2 ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 整数3 , valueInt3 ,typeName=text_input, isHideInSearch=true -->
                     <!-- 标签列1 , listLabel1 ,typeName=text_input, isHideInSearch=true -->
                     <!-- 标签列2 , listLabel2 ,typeName=text_input, isHideInSearch=true -->
                     <!-- 标签列3 , listLabel3 ,typeName=text_input, isHideInSearch=true -->
