--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_host_tree.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_host_tree.html
@@ -62,7 +62,7 @@
     </div>
     <div class="right-tab" style="margin-left: 8px;margin-right: 8px" >
         <div style="margin-top:6px;">
-            <iframe id="chartList" th:src="'/business/ops/monitor_node_resource/monitor_node_collect_data_graph.html?nodeId=none'" frameborder=0 width="100%" onload="setIframeHeight(this)"   ></iframe>
+            <iframe id="chartList" th:src="'/business/ops/monitor_node_resource/monitor_node_collect_data_graph.html?nodeId=none'" frameborder=0 width="100%" ></iframe>
         </div>
     </div>
 </div>
