--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node/monitor_node_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node/monitor_node_list.html
@@ -2,7 +2,7 @@
 /**
  * 节点 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-02-19 19:33:26
+ * @since 2022-02-22 17:47:11
  */
  -->
  <!DOCTYPE html>
@@ -51,7 +51,7 @@
                     <!-- 凭证(SSH) , sshVoucherId ,typeName=select_box, isHideInSearch=true -->
                     <!-- SSH端口 , sshPort ,typeName=number_input, isHideInSearch=true -->
                     <!-- Agent端口 , agentPort ,typeName=number_input, isHideInSearch=true -->
-                    <!-- Zabbix代理端口 , zabbixAgengPort ,typeName=number_input, isHideInSearch=true -->
+                    <!-- Zabbix代理端口 , zabbixAgentPort ,typeName=number_input, isHideInSearch=true -->
                     <!-- Snmp端口 , snmpPort ,typeName=number_input, isHideInSearch=true -->
                     <!-- Snmp版本 , snmpVersion ,typeName=text_input, isHideInSearch=true -->
                     <!-- Snmp团体 , snmpCommunity ,typeName=text_input, isHideInSearch=true -->
