--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl/monitor_tpl_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl/monitor_tpl_list.html
@@ -2,7 +2,7 @@
 /**
  * 监控模版 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-02-13 08:04:06
+ * @since 2022-02-23 11:07:05
  */
  -->
  <!DOCTYPE html>
@@ -45,9 +45,17 @@
                         <div id="type" th:data="${'/service-ops/ops-monitor-tpl-type/query-paged-list'}" style="width:150px" extraParam="{}"></div>
                     </div>
                     <!-- 备注 , notes ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 状态 , status ,typeName=radio_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('状态')}" class="search-label status-label">状态</span><span class="search-colon">:</span></div>
+
+
+                        <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.ops.MonitorEnableEnum')}" style="width:150px"></div>
+
+                    </div>
                     <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
                         <input id="name" class="layui-input search-input" style="width: 150px" type="text" />
                     </div>
                     <!-- 编码 , code ,typeName=text_input, isHideInSearch=false -->
@@ -103,6 +111,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
+    var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.ops.MonitorEnableEnum')}]];
     var AUTH_PREFIX="ops_monitor_tpl";
 
 
