--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl/monitor_tpl_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl/monitor_tpl_form.html
@@ -2,7 +2,7 @@
 /**
  * 监控模版 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-02-13 08:04:06
+ * @since 2022-02-23 11:07:05
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-1567-content">
+        <div class="layui-row form-row" id="random-3987-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -51,6 +51,15 @@
                             <div id="type" input-type="select" th:data="${'/service-ops/ops-monitor-tpl-type/query-paged-list'}" extraParam="{}"></div>
                         </div>
                     </div>
+
+
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('状态')}">状态</div><div class="layui-required">*</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input input-type="radio" type="radio" name="status" lay-filter="status" th:each="e,stat:${enum.toArray('com.dt.platform.constants.enums.ops.MonitorEnableEnum')}" th:value="${e.code}" th:title="${e.text}" th:checked="${(e.code=='' || stat.index==0)?'yes':'no'}">
+                    </div>
+                </div>
 
 
                                     <div class="layui-form-item" >
@@ -100,7 +109,8 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var VALIDATE_CONFIG={"code":{"labelInForm":"编码","inputType":"text_input","required":true}};
+    var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.ops.MonitorEnableEnum')}]];
+    var VALIDATE_CONFIG={"code":{"labelInForm":"编码","inputType":"text_input","required":true},"status":{"labelInForm":"状态","inputType":"radio_box","required":true}};
     var AUTH_PREFIX="ops_monitor_tpl";
 
 
