--- a/eam/view/view-eam/src/main/resources/public/business/eam/inventory_asset/inventory_asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/inventory_asset/inventory_asset_form.html
@@ -41,7 +41,7 @@
         <div class="layui-row form-row" id="random-6910-content">
 
              <!--开始：group 循环-->
-            <div class="layui-col-xs12 form-column" >
+            <div class="layui-col-xs12 form-column" style="padding-top: 15px">
 
 
                     <div class="layui-form-item" >
