--- a/eam/view/view-eam/src/main/resources/public/business/eam/inventory/inventory_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/inventory/inventory_form.html
@@ -38,10 +38,10 @@
 
 
 
-        <div class="layui-row form-row" id="random-6995-content">
+        <div class="layui-row form-row" id="random-6995-content"  style="padding-top: 15px">
 
             <!--开始：group 循环-->
-            <div class="layui-col-xs4 form-column"  style="padding-top: 0px" >
+            <div class="layui-col-xs4 form-column" style="padding-top: 0px" >
 
                 <div class="layui-form-item" >
                     <div class="layui-form-label "><div th:text="${lang.translate('盘点名称')}">盘点名称</div><div class="layui-required">*</div></div>
