--- a/eam/view/view-knowledgebase/src/main/resources/public/business/knowledgebase/search/search2.html
+++ b/eam/view/view-knowledgebase/src/main/resources/public/business/knowledgebase/search/search2.html
@@ -9,6 +9,7 @@
     <title>知识库</title>
     <script src="./jquery.min.js"></script>
     <script>
+
         window.paceOptions = {
             ajax: {
                 trackMethods: ['GET', 'POST'],
@@ -27,6 +28,8 @@
     <style>
         body {
             height: 100%;
+            cursor: default;
+            font-family: "PingFang SC",Arial,"Microsoft YaHei",sans-serif;
         }
         .item{
             margin-left:20px;
