--- a/eam/view/view-vehicle/src/main/resources/public/business/vehicle/info/info_list.html
+++ b/eam/view/view-vehicle/src/main/resources/public/business/vehicle/info/info_list.html
@@ -2,7 +2,7 @@
 /**
  * 车辆信息 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-03 17:20:52
+ * @since 2022-04-07 10:46:17
  */
  -->
  <!DOCTYPE html>
@@ -57,6 +57,8 @@
                     <!-- 存放位置 , positionDetail ,typeName=text_input, isHideInSearch=true -->
                     <!-- 图片 , pictures ,typeName=upload, isHideInSearch=true -->
                     <!-- 制单人 , originatorId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 技术参数 , technicalParameter ,typeName=text_area, isHideInSearch=true -->
+                    <!-- 数量 , vehicleCount ,typeName=number_input, isHideInSearch=true -->
                     <!-- 备注 , notes ,typeName=text_input, isHideInSearch=true -->
                     <!-- 车辆类型 , type ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
